update dependicies: use spring @NonNull, remove RxJava.